tests/test_files/errors/dot2.over
tire: { o: 2 }
dot: tire. o
